# dmg-vram-view

./: CMakeLists.txt  README.md  main.cpp
cmake/: depends.cmake
